--- a/index.org
+++ b/index.org
@@ -22,6 +22,11 @@
 [[./2025/2025-Rd13-Belgian-Grand-Prix-Sprint-Qualifying_laptime.csv][SQ: laptime csv]]
 [[./2025/2025-Rd13-Belgian-Grand-Prix-Sprint-Qualifying_rcm.csv][SQ: race control message csv]]
 
+[[./2025/2025-Rd13-Belgian-Grand-Prix-Sprint.pdf][S:Plots PDF]]
+[[./2025/2025-Rd13-Belgian-Grand-Prix-Sprint_gaptime.csv][S:GapTime CSV ]]
+[[./2025/2025-Rd13-Belgian-Grand-Prix-Sprint_laptime.csv][S:ALL LapTime CSV]]
+[[./2025/2025-Rd13-Belgian-Grand-Prix-Sprint_rcm.csv][S:Race Control Message CSV]]
+
 ** Rd12 British Grand Prix
 
 [[./2025/2025-Rd12-British-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
