--- a/index.org
+++ b/index.org
@@ -27,6 +27,10 @@
 [[./2025/2025-Rd13-Belgian-Grand-Prix-Sprint_laptime.csv][S:ALL LapTime CSV]]
 [[./2025/2025-Rd13-Belgian-Grand-Prix-Sprint_rcm.csv][S:Race Control Message CSV]]
 
+[[./2025/2025-Rd13-Belgian-Grand-Prix-Qualifying.pdf][Q: Plot PDF]]
+[[./2025/2025-Rd13-Belgian-Grand-Prix-Qualifying_laptime.csv][Q: laptime csv]]
+[[./2025/2025-Rd13-Belgian-Grand-Prix-Qualifying_rcm.csv][Q: race control message csv]]
+
 ** Rd12 British Grand Prix
 
 [[./2025/2025-Rd12-British-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
