--- a/index.org
+++ b/index.org
@@ -22,6 +22,10 @@
 [[./2025/2025-Rd14-Hungarian-Grand-Prix-Practice-2_laptime.csv][FP2: laptime csv]]
 [[./2025/2025-Rd14-Hungarian-Grand-Prix-Practice-2_rcm.csv][FP2: race control message csv]]
 
+[[./2025/2025-Rd14-Hungarian-Grand-Prix-Practice-3.pdf][FP3: Plot PDF]]
+[[./2025/2025-Rd14-Hungarian-Grand-Prix-Practice-3_laptime.csv][FP3: laptime csv]]
+[[./2025/2025-Rd14-Hungarian-Grand-Prix-Practice-3_rcm.csv][FP3: race control message csv]]
+
 ** Rd13 Belgian Grand Prix
 
 [[./2025/2025-Rd13-Belgian-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
