Add 2025 Rd14 Hungarian GP QF

--- a/index.org
+++ b/index.org
@@ -26,6 +26,10 @@
 [[./2025/2025-Rd14-Hungarian-Grand-Prix-Practice-3_laptime.csv][FP3: laptime csv]]
 [[./2025/2025-Rd14-Hungarian-Grand-Prix-Practice-3_rcm.csv][FP3: race control message csv]]
 
+[[./2025/2025-Rd14-Hungarian-Grand-Prix-Qualifying.pdf][Q: Plot PDF]]
+[[./2025/2025-Rd14-Hungarian-Grand-Prix-Qualifying_laptime.csv][Q: laptime csv]]
+[[./2025/2025-Rd14-Hungarian-Grand-Prix-Qualifying_rcm.csv][Q: race control message csv]]
+
 ** Rd13 Belgian Grand Prix
 
 [[./2025/2025-Rd13-Belgian-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
