--- a/index.org
+++ b/index.org
@@ -12,6 +12,12 @@
 * 2025 Season
 
 
+** Rd15 Dutch Grand Prix
+
+[[./2025/2025-Rd15-Dutch-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
+[[./2025/2025-Rd15-Dutch-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
+[[./2025/2025-Rd15-Dutch-Grand-Prix-Practice-1_rcm.csv][FP1: race control message csv]]
+
 ** Rd14 Hungarian Grand Prix
 
 [[./2025/2025-Rd14-Hungarian-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
