--- a/index.org
+++ b/index.org
@@ -12,6 +12,16 @@
 * 2025 Season
 
 
+** Rd16 Italian Grand Prix
+
+[[./2025/2025-Rd16-Italian-Grand-Prix-Practice-1_incomplete.pdf][FP1: Plot PDF]]
+[[./2025/2025-Rd16-Italian-Grand-Prix-Practice-1_incomplete_laptime.csv][FP1: laptime csv]]
+[[./2025/2025-Rd16-Italian-Grand-Prix-Practice-1_incomplete_rcm.csv][FP1: race control message csv]]
+
+[[./2025/2025-Rd16-Italian-Grand-Prix-Practice-2.pdf][FP2: Plot PDF]]
+[[./2025/2025-Rd16-Italian-Grand-Prix-Practice-2_laptime.csv][FP2: laptime csv]]
+[[./2025/2025-Rd16-Italian-Grand-Prix-Practice-2_rcm.csv][FP2: race control message csv]]
+
 ** Rd15 Dutch Grand Prix
 
 [[./2025/2025-Rd15-Dutch-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
