--- a/index.org
+++ b/index.org
@@ -12,6 +12,15 @@
 * 2025 Season
 
 
+** Rd17 Azerbaijan Grand Prix
+[[./2025/2025-Rd17-Azerbaijan-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
+[[./2025/2025-Rd17-Azerbaijan-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
+[[./2025/2025-Rd17-Azerbaijan-Grand-Prix-Practice-1_rcm.csv][FP1: race control message csv]]
+
+[[./2025/2025-Rd17-Azerbaijan-Grand-Prix-Practice-2.pdf][FP2: Plot PDF]]
+[[./2025/2025-Rd17-Azerbaijan-Grand-Prix-Practice-2_laptime.csv][FP2: laptime csv]]
+[[./2025/2025-Rd17-Azerbaijan-Grand-Prix-Practice-2_rcm.csv][FP2: race control message csv]]
+
 ** Rd16 Italian Grand Prix
 
 [[./2025/2025-Rd16-Italian-Grand-Prix-Practice-1_incomplete.pdf][FP1: Plot PDF]]
