--- a/index.org
+++ b/index.org
@@ -25,6 +25,10 @@
 [[./2025/2025-Rd18-Singapore-Grand-Prix-Practice-3_laptime.csv][FP3: laptime csv]]
 [[./2025/2025-Rd18-Singapore-Grand-Prix-Practice-3_rcm.csv][FP3: race control message csv]]
 
+[[./2025/2025-Rd18-Singapore-Grand-Prix-Qualifying.pdf][Q: Plot PDF]]
+[[./2025/2025-Rd18-Singapore-Grand-Prix-Qualifying_laptime.csv][Q: laptime csv]]
+[[./2025/2025-Rd18-Singapore-Grand-Prix-Qualifying_rcm.csv][Q: race control message csv]]
+
 ** Rd17 Azerbaijan Grand Prix
 [[./2025/2025-Rd17-Azerbaijan-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
 [[./2025/2025-Rd17-Azerbaijan-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
