--- a/index.org
+++ b/index.org
@@ -29,6 +29,12 @@
 [[./2025/2025-Rd18-Singapore-Grand-Prix-Qualifying_laptime.csv][Q: laptime csv]]
 [[./2025/2025-Rd18-Singapore-Grand-Prix-Qualifying_rcm.csv][Q: race control message csv]]
 
+[[./2025/2025-Rd18-Singapore-Grand-Prix-Race.pdf][R:Plots PDF]]
+[[./2025/2025-Rd18-Singapore-Grand-Prix-Race_gaptime.csv][R:GapTime CSV ]]
+[[./2025/2025-Rd18-Singapore-Grand-Prix-Race_laptime.csv][R:ALL LapTime CSV]]
+[[./2025/2025-Rd18-Singapore-Grand-Prix-Race_rcm.csv][R:Race Control Message CSV]]
+[[https://youtu.be/4-B7-cVV5Ww][GAP Graph animation]]
+
 ** Rd17 Azerbaijan Grand Prix
 [[./2025/2025-Rd17-Azerbaijan-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
 [[./2025/2025-Rd17-Azerbaijan-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
