--- a/index.org
+++ b/index.org
@@ -20,6 +20,17 @@
 [[./2025/2025-Rd19-United-States-Grand-Prix-Sprint-Qualifying_laptime.csv][SQ: laptime csv]]
 [[./2025/2025-Rd19-United-States-Grand-Prix-Sprint-Qualifying_rcm.csv][SQ: race control message csv]]
 
+[[./2025/2025-Rd19-United-States-Grand-Prix-Sprint.pdf][S:Plots PDF]]
+[[./2025/2025-Rd19-United-States-Grand-Prix-Sprint_gaptime.csv][S:GapTime CSV ]]
+[[./2025/2025-Rd19-United-States-Grand-Prix-Sprint_laptime.csv][S:ALL LapTime CSV]]
+[[./2025/2025-Rd19-United-States-Grand-Prix-Sprint_rcm.csv][S:Race Control Message CSV]]
+[[https://youtu.be/0Uhiaftyqi0?si=DYK9vSSY6N0JLx4C][SPRINT GAP Graph animation]]
+
+[[./2025/2025-Rd19-United-States-Grand-Prix-Qualifying.pdf][Q: Plot PDF]]
+[[./2025/2025-Rd19-United-States-Grand-Prix-Qualifying_laptime.csv][Q: laptime csv]]
+[[./2025/2025-Rd19-United-States-Grand-Prix-Qualifying_rcm.csv][Q: race control message csv]]
+
+
 ** Rd18 Singapore Grand Prix
 [[./2025/2025-Rd18-Singapore-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
 [[./2025/2025-Rd18-Singapore-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
