--- a/index.org
+++ b/index.org
@@ -30,6 +30,11 @@
 [[./2025/2025-Rd19-United-States-Grand-Prix-Qualifying_laptime.csv][Q: laptime csv]]
 [[./2025/2025-Rd19-United-States-Grand-Prix-Qualifying_rcm.csv][Q: race control message csv]]
 
+[[./2025/2025-Rd19-United-States-Grand-Prix-Race.pdf][R:Plots PDF]]
+[[./2025/2025-Rd19-United-States-Grand-Prix-Race_gaptime.csv][R:GapTime CSV ]]
+[[./2025/2025-Rd19-United-States-Grand-Prix-Race_laptime.csv][R:ALL LapTime CSV]]
+[[./2025/2025-Rd19-United-States-Grand-Prix-Race_rcm.csv][R:Race Control Message CSV]]
+[[https://youtu.be/U-_qTNeCgGg][GAP Graph animation]]
 
 ** Rd18 Singapore Grand Prix
 [[./2025/2025-Rd18-Singapore-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
