--- a/index.org
+++ b/index.org
@@ -11,6 +11,15 @@
 
 * 2025 Season
 
+** Rd20 Mexico City Grand Prix
+[[./2025/2025-Rd20-Mexico-City-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
+[[./2025/2025-Rd20-Mexico-City-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
+[[./2025/2025-Rd20-Mexico-City-Grand-Prix-Practice-1_rcm.csv][FP1: race control message csv]]
+
+[[./2025/2025-Rd20-Mexico-City-Grand-Prix-Practice-2.pdf][FP2: Plot PDF]]
+[[./2025/2025-Rd20-Mexico-City-Grand-Prix-Practice-2_laptime.csv][FP2: laptime csv]]
+[[./2025/2025-Rd20-Mexico-City-Grand-Prix-Practice-2_rcm.csv][FP2: race control message csv]]
+
 ** Rd19 United States Grand Prix
 [[./2025/2025-Rd19-United-States-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
 [[./2025/2025-Rd19-United-States-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
