--- a/index.org
+++ b/index.org
@@ -20,6 +20,14 @@
 [[./2025/2025-Rd20-Mexico-City-Grand-Prix-Practice-2_laptime.csv][FP2: laptime csv]]
 [[./2025/2025-Rd20-Mexico-City-Grand-Prix-Practice-2_rcm.csv][FP2: race control message csv]]
 
+[[./2025/2025-Rd20-Mexico-City-Grand-Prix-Practice-3.pdf][FP3: Plot PDF]]
+[[./2025/2025-Rd20-Mexico-City-Grand-Prix-Practice-3_laptime.csv][FP3: laptime csv]]
+[[./2025/2025-Rd20-Mexico-City-Grand-Prix-Practice-3_rcm.csv][FP3: race control message csv]]
+
+[[./2025/2025-Rd20-Mexico-City-Grand-Prix-Qualifying.pdf][Q: Plot PDF]]
+[[./2025/2025-Rd20-Mexico-City-Grand-Prix-Qualifying_laptime.csv][Q: laptime csv]]
+[[./2025/2025-Rd20-Mexico-City-Grand-Prix-Qualifying_rcm.csv][Q: race control message csv]]
+
 ** Rd19 United States Grand Prix
 [[./2025/2025-Rd19-United-States-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
 [[./2025/2025-Rd19-United-States-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
