--- a/index.org
+++ b/index.org
@@ -11,6 +11,11 @@
 
 * 2025 Season
 
+** Rd22 Las Vegas Grand Prix
+[[./2025/2025-Rd22-Las-Vegas-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
+[[./2025/2025-Rd22-Las-Vegas-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
+[[./2025/2025-Rd22-Las-Vegas-Grand-Prix-Practice-1_rcm.csv][FP1: race control message csv]]
+
 ** Rd21 Sao Paulo Grand Prix
 [[./2025/2025-Rd21-Sao-Paulo-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
 [[./2025/2025-Rd21-Sao-Paulo-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
@@ -35,7 +40,6 @@
 [[./2025/2025-Rd21-Sao-Paulo-Grand-Prix-Race_laptime.csv][R:ALL LapTime CSV]]
 [[./2025/2025-Rd21-Sao-Paulo-Grand-Prix-Race_rcm.csv][R:Race Control Message CSV]]
 [[https://youtu.be/ApcATC9X2-c][GAP Graph animation]]
-
 
 ** Rd20 Mexico City Grand Prix
 [[./2025/2025-Rd20-Mexico-City-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
