Add 2025 Rd22 Las Vegas GP QF

--- a/index.org
+++ b/index.org
@@ -24,6 +24,10 @@
 [[./2025/2025-Rd22-Las-Vegas-Grand-Prix-Practice-3_laptime.csv][FP3: laptime csv]]
 [[./2025/2025-Rd22-Las-Vegas-Grand-Prix-Practice-3_rcm.csv][FP3: race control message csv]]
 
+[[./2025/2025-Rd22-Las-Vegas-Grand-Prix-Qualifying.pdf][Q: Plot PDF]]
+[[./2025/2025-Rd22-Las-Vegas-Grand-Prix-Qualifying_laptime.csv][Q: laptime csv]]
+[[./2025/2025-Rd22-Las-Vegas-Grand-Prix-Qualifying_rcm.csv][Q: race control message csv]]
+
 ** Rd21 Sao Paulo Grand Prix
 [[./2025/2025-Rd21-Sao-Paulo-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
 [[./2025/2025-Rd21-Sao-Paulo-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
