--- a/index.org
+++ b/index.org
@@ -28,6 +28,12 @@
 [[./2025/2025-Rd22-Las-Vegas-Grand-Prix-Qualifying_laptime.csv][Q: laptime csv]]
 [[./2025/2025-Rd22-Las-Vegas-Grand-Prix-Qualifying_rcm.csv][Q: race control message csv]]
 
+[[./2025/2025-Rd22-Las-Vegas-Grand-Prix-Race.pdf][R:Plots PDF]]
+[[./2025/2025-Rd22-Las-Vegas-Grand-Prix-Race_gaptime.csv][R:GapTime CSV ]]
+[[./2025/2025-Rd22-Las-Vegas-Grand-Prix-Race_laptime.csv][R:ALL LapTime CSV]]
+[[./2025/2025-Rd22-Las-Vegas-Grand-Prix-Race_rcm.csv][R:Race Control Message CSV]]
+[[https://youtu.be/WdznIVSlc3g][GAP Graph animation]]
+
 ** Rd21 Sao Paulo Grand Prix
 [[./2025/2025-Rd21-Sao-Paulo-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
 [[./2025/2025-Rd21-Sao-Paulo-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
@@ -51,7 +57,7 @@
 [[./2025/2025-Rd21-Sao-Paulo-Grand-Prix-Race_gaptime.csv][R:GapTime CSV ]]
 [[./2025/2025-Rd21-Sao-Paulo-Grand-Prix-Race_laptime.csv][R:ALL LapTime CSV]]
 [[./2025/2025-Rd21-Sao-Paulo-Grand-Prix-Race_rcm.csv][R:Race Control Message CSV]]
-[[https://youtu.be/ApcATC9X2-c][GAP Graph animation]]
+[[https://youtu.be/WdznIVSlc3g?si=BgVK6ifnvmc_W2X7][GAP Graph animation]]
 
 ** Rd20 Mexico City Grand Prix
 [[./2025/2025-Rd20-Mexico-City-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
