--- a/index.org
+++ b/index.org
@@ -11,6 +11,12 @@
 
 * 2025 Season
 
+** Rd23 Qatar Grand Prix
+
+[[./2025/2025-Rd23-Qatar-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
+[[./2025/2025-Rd23-Qatar-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
+[[./2025/2025-Rd23-Qatar-Grand-Prix-Practice-1_rcm.csv][FP1: race control message csv]]
+
 ** Rd22 Las Vegas Grand Prix
 [[./2025/2025-Rd22-Las-Vegas-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
 [[./2025/2025-Rd22-Las-Vegas-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
