Add 2025 Rd23 Qatar GP Race

--- a/index.org
+++ b/index.org
@@ -31,6 +31,12 @@
 [[./2025/2025-Rd23-Qatar-Grand-Prix-Qualifying_laptime.csv][Q: laptime csv]]
 [[./2025/2025-Rd23-Qatar-Grand-Prix-Qualifying_rcm.csv][Q: race control message csv]]
 
+[[./2025/2025-Rd23-Qatar-Grand-Prix-Race.pdf][R:Plots PDF]]
+[[./2025/2025-Rd23-Qatar-Grand-Prix-Race_gaptime.csv][R:GapTime CSV ]]
+[[./2025/2025-Rd23-Qatar-Grand-Prix-Race_laptime.csv][R:ALL LapTime CSV]]
+[[./2025/2025-Rd23-Qatar-Grand-Prix-Race_rcm.csv][R:Race Control Message CSV]]
+[[https://youtu.be/JFpQSlofGtI][GAP Graph animation]]
+
 ** Rd22 Las Vegas Grand Prix
 [[./2025/2025-Rd22-Las-Vegas-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
 [[./2025/2025-Rd22-Las-Vegas-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
