--- a/index.org
+++ b/index.org
@@ -11,6 +11,15 @@
 
 * 2025 Season
 
+** Rd24 Abu Dhabi Grand Prix
+[[./2025/2025-Rd24-Abu-Dhabi-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
+[[./2025/2025-Rd24-Abu-Dhabi-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
+[[./2025/2025-Rd24-Abu-Dhabi-Grand-Prix-Practice-1_rcm.csv][FP1: race control message csv]]
+
+[[./2025/2025-Rd24-Abu-Dhabi-Grand-Prix-Practice-2.pdf][FP2: Plot PDF]]
+[[./2025/2025-Rd24-Abu-Dhabi-Grand-Prix-Practice-2_laptime.csv][FP2: laptime csv]]
+[[./2025/2025-Rd24-Abu-Dhabi-Grand-Prix-Practice-2_rcm.csv][FP2: race control message csv]]
+
 ** Rd23 Qatar Grand Prix
 
 [[./2025/2025-Rd23-Qatar-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
