--- a/index.org
+++ b/index.org
@@ -20,6 +20,10 @@
 [[./2025/2025-Rd24-Abu-Dhabi-Grand-Prix-Practice-2_laptime.csv][FP2: laptime csv]]
 [[./2025/2025-Rd24-Abu-Dhabi-Grand-Prix-Practice-2_rcm.csv][FP2: race control message csv]]
 
+[[./2025/2025-Rd24-Abu-Dhabi-Grand-Prix-Practice-3.pdf][FP3: Plot PDF]]
+[[./2025/2025-Rd24-Abu-Dhabi-Grand-Prix-Practice-3_laptime.csv][FP3: laptime csv]]
+[[./2025/2025-Rd24-Abu-Dhabi-Grand-Prix-Practice-3_rcm.csv][FP3: race control message csv]]
+
 ** Rd23 Qatar Grand Prix
 
 [[./2025/2025-Rd23-Qatar-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
