--- a/index.org
+++ b/index.org
@@ -28,6 +28,12 @@
 [[./2025/2025-Rd24-Abu-Dhabi-Grand-Prix-Qualifying_laptime.csv][Q: laptime csv]]
 [[./2025/2025-Rd24-Abu-Dhabi-Grand-Prix-Qualifying_rcm.csv][Q: race control message csv]]
 
+[[./2025/2025-Rd24-Abu-Dhabi-Grand-Prix-Race.pdf][R:Plots PDF]]
+[[./2025/2025-Rd24-Abu-Dhabi-Grand-Prix-Race_gaptime.csv][R:GapTime CSV ]]
+[[./2025/2025-Rd24-Abu-Dhabi-Grand-Prix-Race_laptime.csv][R:ALL LapTime CSV]]
+[[./2025/2025-Rd24-Abu-Dhabi-Grand-Prix-Race_rcm.csv][R:Race Control Message CSV]]
+[[https://youtu.be/qk6KcAhUpfI][GAP Graph animation]]
+
 ** Rd23 Qatar Grand Prix
 
 [[./2025/2025-Rd23-Qatar-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
