--- a/index.org
+++ b/index.org
@@ -11,6 +11,7 @@
 
 * 2025 Season
 
+[[./2025/TARONOTE_2025.csv][エグいてー]]
 ** Rd24 Abu Dhabi Grand Prix
 [[./2025/2025-Rd24-Abu-Dhabi-Grand-Prix-Practice-1.pdf][FP1: Plot PDF]]
 [[./2025/2025-Rd24-Abu-Dhabi-Grand-Prix-Practice-1_laptime.csv][FP1: laptime csv]]
