--- a/index.org
+++ b/index.org
@@ -24,6 +24,12 @@
 [[./2026/2026-Pre-Season-Testing-1-2_laptime.csv][Laptime CSV]]
 [[./2026/2026-Pre-Season-Testing-1-2_rcm.csv][RaceControl Message CSV]]
 
+*** Week1 Day3
+
+[[./2026/2026-Pre-Season-Testing-1-3.pdf][Plot PDF]]
+[[./2026/2026-Pre-Season-Testing-1-3_laptime.csv][Laptime CSV]]
+[[./2026/2026-Pre-Season-Testing-1-3_rcm.csv][RaceControl Message CSV]]
+
 * 2025 Season
 
 ** Rd24 Abu Dhabi Grand Prix
