Add Pre-Season test week2 day1

--- a/index.org
+++ b/index.org
@@ -30,6 +30,12 @@
 [[./2026/2026-Pre-Season-Testing-1-3_laptime.csv][Laptime CSV]]
 [[./2026/2026-Pre-Season-Testing-1-3_rcm.csv][RaceControl Message CSV]]
 
+*** Week2 Day1
+
+[[./2026/2026-Pre-Season-Testing-2-1.pdf][Plot PDF]]
+[[./2026/2026-Pre-Season-Testing-2-1_laptime.csv][Laptime CSV]]
+[[./2026/2026-Pre-Season-Testing-2-1_rcm.csv][RaceControl Message CSV]]
+
 * 2025 Season
 
 ** Rd24 Abu Dhabi Grand Prix
