--- a/index.org
+++ b/index.org
@@ -36,6 +36,12 @@
 [[./2026/2026-Pre-Season-Testing-2-1_laptime.csv][Laptime CSV]]
 [[./2026/2026-Pre-Season-Testing-2-1_rcm.csv][RaceControl Message CSV]]
 
+*** Week2 Day2
+
+[[./2026/2026-Pre-Season-Testing-2-2.pdf][Plot PDF]]
+[[./2026/2026-Pre-Season-Testing-2-2_laptime.csv][Laptime CSV]]
+[[./2026/2026-Pre-Season-Testing-2-2_rcm.csv][RaceControl Message CSV]]
+
 * 2025 Season
 
 ** Rd24 Abu Dhabi Grand Prix
